# FaceOfBattle

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  vision_design.txt
src/: main.cpp
src/components/: components.hpp
src/core/: constants.hpp  types.hpp
src/simulation/: spatial_hash.hpp
src/systems/: combat_system.cpp  combat_system.hpp  formation_system.cpp  formation_system.hpp  movement_system.cpp  movement_system.hpp  render_system.cpp  render_system.hpp
